@@ -4,6 +4,7 @@
   <object name="DerivedType" meta_type="Factory-based Type Information"/>
   <object name="SimpleFolder" meta_type="Factory-based Type Information"/>
   <object name="OrderedFolder" meta_type="Factory-based Type Information"/>
+  <object name="BTreeFolder" meta_type="Factory-based Type Information"/>
   <object name="NonLPSimpleType" meta_type="Factory-based Type Information"/>
   <object name="DynamicFolder"
       meta_type="Factory-based Type Information with dynamic views"/>
