@@ -1,0 +1,25 @@
+<?xml version="1.0"?>
+<object name="BTreeFolder" meta_type="Factory-based Type Information"
+   xmlns:i18n="http://xml.zope.org/namespaces/i18n">
+ <property name="title">BTree Lingua Folder</property>
+ <property name="description">A btree folderish archetype</property>
+ <property name="content_icon">folder_icon.gif</property>
+ <property name="content_meta_type">BTreeFolder</property>
+ <property name="product">LinguaPlone</property>
+ <property name="factory">addBTreeFolder</property>
+ <property name="immediate_view">base_edit</property>
+ <property name="global_allow">True</property>
+ <property name="filter_content_types">False</property>
+ <property name="allowed_content_types"/>
+ <property name="allow_discussion">False</property>
+ <alias from="(Default)" to="base_view"/>
+ <alias from="edit" to="base_edit"/>
+ <action title="View" action_id="view" category="object" condition_expr=""
+    url_expr="string:${object_url}/base_view" visible="True">
+  <permission value="View"/>
+ </action>
+ <action title="Edit" action_id="edit" category="object" condition_expr=""
+    url_expr="string:${object_url}/base_edit" visible="True">
+  <permission value="Modify portal content"/>
+ </action>
+</object>
